@@ -1,3 +1,11 @@
+Thu Oct 25 16:49:23 2007  Lee Noar <leenoar@sky.com>
+
+	* gcccompat/_b_return.s: Poke function name to aid debugging.
+	* gcccompat/_galloca.s: Likewise.
+	* gcccompat/_b_frame.s: Likewise.
+	* sys/_syslib.s: In the DSO, call Dynamic Loader function
+	_dl_call_ctors() to call all shared library _init functions.
+
 Tue Oct 16 01:55:08 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>
 
 	* module/sul.s(sul_exec): finetune previous change by canonicalising
